# workflow-orchestration-queue-foxtrot86

./: .gitignore  AGENTS.md  README.md  pyproject.toml  workflow-orchestration-queue-foxtrot86.code-workspace
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
debrief-and-document/: epic-1.1-debrief-report.md  epic-1.2-debrief-report.md  trace-1.2.md  trace.md
docs/: architect-agent.md  indexing-architecture.md  local-development.md  local-orchestration-quickstart.md  new_features.md
docs/.archived/: implementation-plan.md  non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md  zulu48-fix-plan.md
docs/debriefs/: epic-1.4-debrief.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  interactive-report.html  workflow-plan.md
scripts/: start_dev_notifier.sh
src/: __init__.py  notifier_service.py
src/agents/: __init__.py
src/agents/architect/: __init__.py  agent.py  generator.py  github_manager.py  models.py  parser.py  prompts.py  resolver.py
src/agents/bug_correction/: __init__.py  feedback_injector.py  iteration_orchestrator.py  status_transition.py
src/agents/indexing/: __init__.py  index_manager.py  (+1 more)
src/interfaces/: __init__.py  work_queue.py
src/models/: __init__.py  github_events.py  plan.py  work_item.py
src/notifier/: tunnel_manager.py
src/polling/: __init__.py  polling_engine.py  rate_limiter.py  retry.py
src/queue/: __init__.py  github_queue.py
src/sentinel/: __init__.py  config.py  heartbeat.py  label_manager.py  locking.py  log_capture.py  logging_config.py  orchestrator.py  shell_bridge.py  status_feedback.py
test/: test-opencode-run.sh
tests/: test_notifier_service.py  test_tunnel_manager.py
tests/unit/: test_credential_scrubbing.py  test_github_queue.py  test_heartbeat.py  test_issue_parser.py  test_label_manager.py  test_label_service.py  test_locking.py  test_log_capture.py  test_polling_engine.py  test_rate_limiter.py  test_retry.py  test_sentinel_id.py  test_sentinel_logging.py  test_shell_bridge.py  test_status_feedback.py  test_work_item.py  test_work_queue.py
(+20 files in other folders)
